[fix]: [PL-39107]: Fixing webhook service impl test failures